# science

./: LICENSE  README.md
science/: Ideen.docx  (+1 more)
science/digi/: README.md  pyproject.toml  requirements.txt
science/digi/doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_d15f6a55ea8760f1___init___py.html  z_d15f6a55ea8760f1_acoustics_py.html  z_d15f6a55ea8760f1_basilar_py.html  z_d15f6a55ea8760f1_hearing_py.html  z_d15f6a55ea8760f1_information_py.html  z_d15f6a55ea8760f1_mechanics_py.html  z_d15f6a55ea8760f1_neuron_py.html  z_d15f6a55ea8760f1_quantization_py.html  z_d15f6a55ea8760f1_rlc_py.html  z_d15f6a55ea8760f1_sampling_py.html  z_d15f6a55ea8760f1_signals_py.html
science/digi/doc/pdoc/: digi.html  index.html  search.js
science/digi/science/: digi.tex  fig01_sinus_ableitung.tex  fig02_abtastung.tex  fig03_quantisierung.tex  fig04_druckwelle.tex  fig05_membran_modell.tex  fig06_rlc_schaltung.tex  fig07_impedanz_rlc.tex  fig08_zeigerdiagramme.tex  fig09_phasenvergleich.tex  fig10_sprungantwort.tex  fig11_spannungsaufteilung.tex  fig12_frequenzgaenge.tex  fig13_hodgkin_huxley.tex  fig14_aktionspotential.tex  fig15_schwellwert.tex  fig16_ad_wandlung.tex  fig17_bitfolge.tex  fig18_tonotopie.tex  fig19_filterbank.tex  fig20_guete_vergleich.tex  fig21_shannon_kapazitaet.tex
science/digi/src/: experiments.py
science/digi/src/digi/: __init__.py  acoustics.py  basilar.py  hearing.py  information.py  mechanics.py  neuron.py  quantization.py  rlc.py  sampling.py  signals.py
science/digi/src/results/: exp01_harmonic.csv  exp02_aliasing.csv  exp03_quantization_snr.csv  exp04_acoustic_pressure.csv  exp04_spl_levels.csv  exp05_freq_response.csv  exp05_step_response.csv  exp06_rlc_impedance.csv  exp07_hodgkin_huxley.csv  exp08_tonotopy.csv  exp09_shannon_capacity.csv  exp10_membrane_optimality.csv  exp11_active_amplifier.csv  exp12_spike_rate.csv
science/digi/tests/: test_acoustics.py  test_basilar.py  test_hearing.py  test_information.py  test_mechanics.py  test_neuron.py  test_quantization.py  test_rlc.py  test_sampling.py  test_signals.py
science/hawk/: .gitignore  README.md  pyproject.toml
science/hawk/doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_037a5a5b65335b7c___init___py.html  z_037a5a5b65335b7c_aerodynamics_py.html  z_037a5a5b65335b7c_controller_py.html
science/hawk/doc/pdoc/: hawk.html  index.html  search.js
science/hawk/science/: hawk.tex
science/hawk/src/hawk/: __init__.py  aerodynamics.py  controller.py
science/hawk/tests/: test_aerodynamics.py  test_controller.py
science/hydr/: README.md  pyproject.toml  requirements.txt
science/hydr/doc/coverage/: class_index.html  function_index.html  index.html  status.json  z_145eef247bfb46b6___init___py.html  z_7baafcab2c29dbb3___init___py.html  z_7baafcab2c29dbb3_bulk_modulus_py.html  z_7baafcab2c29dbb3_hydraulics_py.html  z_7baafcab2c29dbb3_lifetime_py.html  z_7baafcab2c29dbb3_mixing_py.html  z_7baafcab2c29dbb3_monitoring_py.html  z_7baafcab2c29dbb3_surface_py.html  z_7baafcab2c29dbb3_viscoelastic_py.html  z_7baafcab2c29dbb3_viscosity_py.html
science/hydr/doc/pdoc/: hydr.html  index.html  search.js
science/hydr/science/: hydr.tex
science/hydr/src/: experiments.py
science/hydr/src/hydr/: __init__.py  bulk_modulus.py  hydraulics.py  lifetime.py  mixing.py  monitoring.py  surface.py  viscoelastic.py  viscosity.py
science/hydr/src/results/: exp01_bulk_vs_pressure.csv  exp02_temperature_effects.csv  exp03_gas_content_impact.csv  exp04_eigenfrequency_positioning.csv  exp05_sea_cobot.csv  exp06_viscoelastic_frequency.csv  exp07_oil_lifetime.csv  exp08_aging_failure_rates.csv  exp09_cavitation_surface.csv  (+6 more)
science/hydr/tests/: test_bulk_modulus.py  test_hydraulics.py  test_init.py  test_lifetime.py  test_mixing.py  test_monitoring.py  test_surface.py  test_viscoelastic.py  test_viscosity.py
science/iono/: README.md  pyproject.toml
science/iono/science/: iono.tex
science/iono/src/: __init__.py  architecture.py  demo.py  droplet.py  fabrication.py  logic.py  matrix.py  memory.py  physics.py  simulation.py  transistor.py  utils.py
science/iono/tests/: __init__.py  test_all.py  test_physics.py  test_transistor.py  test_utils.py
science/liionp/: README.md  pyproject.toml
science/liionp/science/: liionp.tex
science/liionp/src/: experiments.py
science/liionp/tests/: test_analysis.py  test_cell.py  test_constants.py  test_controllers.py  test_degradation.py  test_mechanics.py  test_simulation.py  test_thermal.py
science/lsat/: README.md  pyproject.toml
science/lsat/science/: lsat.tex
science/lsat/src/: __init__.py  _bench_nuitka.py  boolean_functions.py  circuit.py  circuit_to_cnf.py  cnf.py  demo.py  experiments.py  lbv.py  learning.py  subgraph_sat_solver.py  tool.py
science/lsat/tests/: test_all.py  test_boolean_functions.py  test_circuit.py  test_circuit_to_cnf.py  test_cnf.py  test_integration.py  test_lbv.py  test_learning.py  test_subgraph_sat_solver.py  test_tools.py
science/oqtum/: .gitignore  README.md  pyproject.toml
science/oqtum/science/: oqtum.tex
science/oqtum/src/: __init__.py  colorimetry.py  ebeam.py  experiments.py  materials.py  optics.py  optimizer.py  pipeline.py  polymer.py
science/oqtum/tests/: test_all.py  test_optics.py  test_polymer.py
science/sigchiffre/: pyproject.toml
science/sigchiffre/science/: sigchiffre.tex
science/uqtl/: README.md  pyproject.toml
science/uqtl/science/: appendix.tex  sec1_einleitung.tex  sec2_grundlagen.tex  sec3_iqt.tex  sec4_operatoren.tex  sec5_beispiele.tex  sec6_konformitaet.tex  sec7_implementierung.tex  sec8_diskussion.tex  sec9_zusammenfassung.tex  uqtl.tex
science/uqtl/tests/: test_equivalence.py  test_iqt.py  test_normalizer.py  test_sql_generator.py
science/wchiffre/: .gitignore  README.md  pyproject.toml
science/wchiffre/science/: plots.py  wchiffre.tex
science/wchiffre/src/: decrypt.py  demo.py  encrypt.py  keygen.py  math_utils.py
science/wchiffre/tests/: test_decrypt.py  test_encrypt.py  test_integration.py  test_keygen.py  test_math_utils.py
(+1064 files in other folders)
