[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hawk"]

[project]
name = "hawk"
version = "1.0.0"
description = "Bioinspiriertes Sturzangriffssystem: Der Wanderfalke (**Falco peregrinus**) als aerodynamisches Vorbild für autonom navigierende Tauch-Drohnen"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
]

[project.optional-dependencies]
dev = [
    "hatchling",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pdoc>=16.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
