[project]
name = "hydr"
version = "1.0.0"
description = "Mechanische Eigenschaften, Viskoelastizität und optimale Betriebsparameter für Robotik, Automatisierung und Prozessanlagen"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
    "src/experiments.py"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
