[project]
name = "iono"
version = "1.0.0"
description = "Ionotronisches Flüssigkeits-Rechnen: Wasservolumen als Ladungsträger, Schalter und Speicher"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "matplotlib",
]

[project.optional-dependencies]
dev = [
    "cairosvg",
    "pylint",
    "pytest",
    "pytest-cov",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
