[project]
name = "liionp"
version = "1.1.0"
description = "KI-Power-Management-Modul für Lithium-Ionen-Akkumulatoren"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pdoc>=16.0",
    "cairosvg>=2.5"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
    "src/experiments.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
