[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "sigchiffre"
version = "1.0.0"
description = "Signatur-Chiffre: strukturbasierte Verschlüsselung auf Basis der injektiven Subgraph-Signaturfunktion"
authors = [{ name = "Stephan Epp" }]
requires-python = ">=3.11"
dependencies = ["numpy>=1.24"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/sigchiffre"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = false
