[project]
name = "wchiffre"
version = "1.0.0"
description = "Modulares kryptografisches Verfahren mit Dummy-Fenster-Fragmentierung und inverser Schluesselstruktur"
authors = [
    {name = "Stephan Epp"}
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "-v",
    "--cov=src",
    "--cov-report=html:doc/coverage",
    "--cov-report=term-missing",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "venv/*",
    "doc/*",
    "src/demo.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]